--- a/k8s/k2tf/05_cluster_auto_scaler/deployment.yaml
+++ b/k8s/k2tf/05_cluster_auto_scaler/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: ca-nginx
-        image: stacksimplify/kubenginx:1.0.0
+        image: kin3303/mynginx1
         ports:
         - containerPort: 80
         resources:
