--- a/eks/modules/terraform-aws-eks-consul/templates/values.yaml
+++ b/eks/modules/terraform-aws-eks-consul/templates/values.yaml
@@ -115,6 +115,7 @@ global:
     scadaAddress:
       secretName: null
       secretKey: null
+
 server:
   enabled: "-"
 #  image: null  
@@ -195,376 +196,373 @@ server:
 #        cpu: "50m"
 #    caCert: null
 
-#externalServers:
-#  enabled: false
-#  hosts: []
-#  httpsPort: 8501
-#  grpcPort: 8502
-#  tlsServerName: null
-#  useSystemRoots: false
-#  k8sAuthMethodHost: null
-#  skipServerWatch: false
 
-#client:
-#  enabled: ${client_enable}
-#  image: null
-#  join: null
-#  dataDirectoryHostPath: null
-#  grpc: ${client_grpc}
-#  nodeMeta:
-#    pod-name: $${HOSTNAME}
-#    host-ip: $${HOST_IP}
-#  exposeGossipPorts: false
-#  serviceAccount:
-#    annotations: ${client_service_account_annotations}
-#  resources:
-#    requests:
-#      memory: "100Mi"
-#      cpu: "100m"
-#    limits:
-#      memory: "100Mi"
-#      cpu: "100m"
-#  securityContext:
-#    runAsNonRoot: true
-#    runAsGroup: 1000
-#    runAsUser: 100
-#    fsGroup: 1000
-#  containerSecurityContext:
-#    client: null
-#    aclInit: null
-#    tlsInit: null
-#  extraConfig: ${client_extra_config} 
-#  extraVolumes: ${client_extra_volumes}
-#  extraContainers: []
-#  tolerations: ${client_tolerations}
-#  nodeSelector: null
-#  affinity: null
-#  priorityClassName: ${client_priority_class}
-#  annotations: ${client_annotations}
-#  extraLabels: ${client_labels}
-#  extraEnvironmentVars: {}
-#  dnsPolicy: null
-#  hostNetwork: false
-#  updateStrategy: null
 
-#dns:
-#  enabled: "-"
-#  enableRedirection: "-"
-#  type: ClusterIP
-#  clusterIP: null
-#  annotations: null
-#  additionalSpec: null
+client:
+  enabled: ${client_enable}
+  image: null
+  join: null
+  dataDirectoryHostPath: null
+  grpc: ${client_grpc}
+  nodeMeta:
+    pod-name: $${HOSTNAME}
+    host-ip: $${HOST_IP}
+  exposeGossipPorts: false
+  serviceAccount:
+    annotations: ${client_service_account_annotations}
+  resources:
+    requests:
+      memory: "100Mi"
+      cpu: "100m"
+    limits:
+      memory: "100Mi"
+      cpu: "100m"
+  securityContext:
+    runAsNonRoot: true
+    runAsGroup: 1000
+    runAsUser: 100
+    fsGroup: 1000
+  containerSecurityContext:
+    client: null
+    aclInit: null
+    tlsInit: null
+  extraConfig: ${client_extra_config} 
+  extraVolumes: ${client_extra_volumes}
+  extraContainers: []
+  tolerations: ${client_tolerations}
+  nodeSelector: null
+  affinity: null
+  priorityClassName: ${client_priority_class}
+  annotations: ${client_annotations}
+  extraLabels: ${client_labels}
+  extraEnvironmentVars: {}
+  dnsPolicy: null
+  hostNetwork: false
+  updateStrategy: null
 
+externalServers:
+  enabled: false
+  hosts: []
+  httpsPort: 8501
+  grpcPort: 8502
+  tlsServerName: null
+  useSystemRoots: false
+  k8sAuthMethodHost: null
+  skipServerWatch: false
+
+dns:
+  enabled: "-"
+  enableRedirection: "-"
+  type: ClusterIP
+  clusterIP: null
+  annotations: null
+  additionalSpec: null
 
 ui:
   enabled: "-"
-#  service:
-#    enabled: true
-#    type: null
-#    port:
-#      http: 80
-#      https: 443
-#    nodePort:
-#      http: null
-#      https: null
-#    annotations: null
-#    additionalSpec: null
-#  ingress:
-#    enabled: false
-#    ingressClassName: ""
-#    pathType: Prefix
-#    hosts: []
-#    tls: []
-#    annotations: null  
+  service:
+    enabled: true
+    type: null
+    port:
+      http: 80
+      https: 443
+    nodePort:
+      http: null
+      https: null
+    annotations: null
+    additionalSpec: null
+  ingress:
+    enabled: false
+    ingressClassName: ""
+    pathType: Prefix
+    hosts: []
+    tls: []
+    annotations: null  
   metrics:
     enabled: "-"
     provider:  ${ui_metrics_provider}
     baseURL:  ${ui_metrics_base_url}
-#  dashboardURLTemplates:
-#    service: ""
-#    
-
-
-#syncCatalog:
-#  enabled: ${enable_sync_catalog}
-#  image: null
-#  default: ${sync_by_default}
-#  priorityClassName: ${sync_priority_class}
-#  toConsul: ${sync_to_consul}
-#  toK8S: ${sync_to_k8s}
-#  k8sPrefix: ${sync_k8s_prefix}
-#  k8sAllowNamespaces: [ "*" ]
-#  k8sDenyNamespaces: [ "kube-system", "kube-public" ]
-#  k8sSourceNamespace: null
-#  consulNamespaces:
-#    consulDestinationNamespace: "default"
-#    mirroringK8S: true
-#    mirroringK8SPrefix: ""
-#  addK8SNamespaceSuffix: ${sync_add_k8s_namespace_suffix}
-#  consulPrefix: null
-#  k8sTag: null
-#  consulNodeName: "k8s-sync"
-#  syncClusterIPServices: ${sync_cluster_ip_services}
-#  nodePortSyncType: ${sync_node_port_type}
-#  aclSyncToken:
-#    ${indent(4, sync_acl_token)}
-#  nodeSelector: null
-#  affinity: ${sync_affinity}
-#  tolerations: ${sync_tolerations}
-#  serviceAccount:
-#    annotations: ${sync_service_account_annotations}
-#  resources:
-#    requests:
-#      memory: "50Mi"
-#      cpu: "50m"
-#    limits:
-#      memory: "50Mi"
-#      cpu: "50m"
-#  logLevel: ""
-#  consulWriteInterval: null
-#  extraLabels: null
-#  annotations: null
-
+  dashboardURLTemplates:
+    service: ""
 
 connectInject:
   enabled: ${enable_connect_inject}
-#  replicas: ${connect_inject_replicas}
-#  image: null
   default: ${connect_inject_by_default}
-#  transparentProxy:
-#    defaultEnabled: ${transparent_proxy_default_enabled}
-#    defaultOverwriteProbes: ${transparent_proxy_default_overwrite_probes}
-#  disruptionBudget:
-#    enabled: true
-#    maxUnavailable: null
-#    minAvailable: null
-#  cni:
-#    enabled: false
-#    logLevel: null
-#    cniBinDir: "/opt/cni/bin"
-#    cniNetDir: "/etc/cni/net.d"
-#    multus: false
-#    resources:
-#      requests:
-#        memory: "75Mi"
-#        cpu: "75m"
-#      limits:
-#        memory: "100Mi"
-#        cpu: "100m"
-#    resourceQuota:
-#      pods: 5000
-#    securityContext:
-#      runAsNonRoot: false
-#      runAsGroup: 0
-#      runAsUser: 0
-#    updateStrategy: null
-#  consulNode:
-#    meta: null
-#  metrics:
-#    defaultEnabled: "-"
-#    defaultEnableMerging: ${connect_inject_default_enable_merging}
-#    defaultMergedMetricsPort: ${connect_inject_default_merged_metrics_port}
-#    defaultPrometheusScrapePort: ${connect_inject_default_prometheus_scrape_port}
-#    defaultPrometheusScrapePath: ${connect_inject_default_prometheus_scrape_path}
-#  envoyExtraArgs: ${envoy_extra_args}
-#  priorityClassName: ${connect_inject_priority_class}
-#  extraLabels: null
-#  annotations: ${connect_inject_service_account_annotations}
-#  imageConsul: null
-#  logLevel: ""
-#  serviceAccount:
-#    annotations: null
-#  resources:
-#    requests:
-#      memory: "50Mi"
-#      cpu: "50m"
-#    limits:
-#      memory: "50Mi"
-#      cpu: "50m"
-#  failurePolicy: ${connect_inject_failure_policy}
-#  namespaceSelector: |
-#    matchExpressions:
-#      - key: "kubernetes.io/metadata.name"
-#        operator: "NotIn"
-#        values: ["kube-system","local-path-storage"]
-#  k8sAllowNamespaces: ${connect_inject_allowed_namespaces}
-#  k8sDenyNamespaces: ${connect_inject_denied_namespaces}
-#  consulNamespaces:
-#    consulDestinationNamespace: "default"
-#    mirroringK8S: true
-#    mirroringK8SPrefix: ""
-#  nodeSelector: null
-#  affinity: ${connect_inject_affinity}
-#  tolerations: ${connect_inject_tolerations}
-#  aclBindingRuleSelector: ${connect_inject_acl_binding_rule_selector}
-#  overrideAuthMethodName: ${connect_inject_override_auth_method_name}
-#  aclInjectToken:
-#    secretName: null
-#    secretKey: null
-#  sidecarProxy:
-#    concurrency: 2
-#    resources:
-#      requests:
-#        memory: null
-#        cpu: null
-#      limits:
-#        memory: null
-#        cpu: null
-#  initContainer:
-#    resources:
-#      requests:
-#        memory: "25Mi"
-#        cpu: "50m"
-#      limits:
-#        memory: "150Mi"
-#        cpu: "50m"
+  replicas: ${connect_inject_replicas}
+  image: null  
+  transparentProxy:
+    defaultEnabled: ${transparent_proxy_default_enabled}
+    defaultOverwriteProbes: ${transparent_proxy_default_overwrite_probes}
+  disruptionBudget:
+    enabled: true
+    maxUnavailable: null
+    minAvailable: null
+  cni:
+    enabled: false
+    logLevel: null
+    cniBinDir: "/opt/cni/bin"
+    cniNetDir: "/etc/cni/net.d"
+    multus: false
+    resources:
+      requests:
+        memory: "75Mi"
+        cpu: "75m"
+      limits:
+        memory: "100Mi"
+        cpu: "100m"
+    resourceQuota:
+      pods: 5000
+    securityContext:
+      runAsNonRoot: false
+      runAsGroup: 0
+      runAsUser: 0
+    updateStrategy: null
+  consulNode:
+    meta: null
+  metrics:
+    defaultEnabled: "-"
+    defaultEnableMerging: ${connect_inject_default_enable_merging}
+    defaultMergedMetricsPort: ${connect_inject_default_merged_metrics_port}
+    defaultPrometheusScrapePort: ${connect_inject_default_prometheus_scrape_port}
+    defaultPrometheusScrapePath: ${connect_inject_default_prometheus_scrape_path}
+  envoyExtraArgs: ${envoy_extra_args}
+  priorityClassName: ${connect_inject_priority_class}
+  extraLabels: null
+  annotations: ${connect_inject_service_account_annotations}
+  imageConsul: null
+  logLevel: ""
+  serviceAccount:
+    annotations: null
+  resources:
+    requests:
+      memory: "50Mi"
+      cpu: "50m"
+    limits:
+      memory: "50Mi"
+      cpu: "50m"
+  failurePolicy: ${connect_inject_failure_policy}
+  namespaceSelector: |
+    matchExpressions:
+      - key: "kubernetes.io/metadata.name"
+        operator: "NotIn"
+        values: ["kube-system","local-path-storage"]
+  k8sAllowNamespaces: ${connect_inject_allowed_namespaces}
+  k8sDenyNamespaces: ${connect_inject_denied_namespaces}
+  consulNamespaces:
+    consulDestinationNamespace: "default"
+    mirroringK8S: true
+    mirroringK8SPrefix: ""
+  nodeSelector: null
+  affinity: ${connect_inject_affinity}
+  tolerations: ${connect_inject_tolerations}
+  aclBindingRuleSelector: ${connect_inject_acl_binding_rule_selector}
+  overrideAuthMethodName: ${connect_inject_override_auth_method_name}
+  aclInjectToken:
+    secretName: null
+    secretKey: null
+  sidecarProxy:
+    concurrency: 2
+    resources:
+      requests:
+        memory: null
+        cpu: null
+      limits:
+        memory: null
+        cpu: null
+  initContainer:
+    resources:
+      requests:
+        memory: "25Mi"
+        cpu: "50m"
+      limits:
+        memory: "150Mi"
+        cpu: "50m"
 
-#meshGateway:
-#  enabled: false
-#  replicas: 1
-#  wanAddress:
-#    source: "Service"
-#    port: 443
-#    static: ""
-#  service:
-#    type: LoadBalancer
-#    port: 443
-#    nodePort: null
-#    annotations: null
-#    additionalSpec: null
-#  hostNetwork: false
-#  dnsPolicy: null
-#  consulServiceName: "mesh-gateway"
-#  containerPort: 8443
-#  hostPort: null
-#  serviceAccount:
-#    annotations: null
-#  resources:
-#    requests:
-#      memory: "100Mi"
-#      cpu: "100m"
-#    limits:
-#      memory: "100Mi"
-#      cpu: "100m"
-#
-#  initServiceInitContainer:
-#    resources:
-#      requests:
-#        memory: "50Mi"
-#        cpu: "50m"
-#      limits:
-#        memory: "50Mi"
-#        cpu: "50m"
-#  affinity: null
-#  tolerations: null
-#  topologySpreadConstraints: ""
-#  nodeSelector: null
-#  priorityClassName: ""
-#  annotations: null
-#
-#ingressGateways:
-#  enabled: ${ingress_gateway_enable}
-#  defaults:
-#    replicas: 1
-#    service:
-#      type: ClusterIP
-#      ports:
-#      - port: 8080
-#        nodePort: null
-#      - port: 8443
-#        nodePort: null
-#      annotations: null
-#      additionalSpec: null
-#    serviceAccount:
-#      annotations: null
-#    resources:
-#      requests:
-#        memory: "100Mi"
-#        cpu: "100m"
-#      limits:
-#        memory: "100Mi"
-#        cpu: "100m"
-#    affinity: null
-#    tolerations: null
-#    topologySpreadConstraints: ""
-#    nodeSelector: null
-#    priorityClassName: ""
-#    terminationGracePeriodSeconds: 10
-#    annotations: null
-#    consulNamespace: "default"
-#  gateways:
-#  - name: ingress-gateway
-#
-#terminatingGateways:
-#  enabled:  ${terminating_gateway_enable}
-#  defaults:
-#    replicas: 1
-#    extraVolumes: [ ]
-#    resources:
-#      requests:
-#        memory: "100Mi"
-#        cpu: "100m"
-#      limits:
-#        memory: "100Mi"
-#        cpu: "100m"
-#    affinity: null
-#    tolerations: null
-#    topologySpreadConstraints: ""
-#    nodeSelector: null
-#    priorityClassName: ""
-#    annotations: null
-#    serviceAccount:
-#      annotations: null
-#    consulNamespace: "default"
-#  gateways:
-#  - name: terminating-gateway
-#
-#apiGateway:
-#  enabled: false
-#  image: null
-#  imageEnvoy: "envoyproxy/envoy:v1.23.1"
-#  logLevel: info
-#  managedGatewayClass:
-#    enabled: true
-#    nodeSelector: null
-#    tolerations: null
-#    serviceType: LoadBalancer
-#    useHostPorts: false
-#    copyAnnotations:
-#      service: null
-#    deployment: null
-#  serviceAccount:
-#    annotations: null
-#  controller:
-#    replicas: 1
-#    annotations: null
-#    priorityClassName: ""
-#    nodeSelector: null
-#    tolerations: null
-#    service:
-#      annotations: null
-#  resources:
-#    requests:
-#      memory: "100Mi"
-#      cpu: "100m"
-#    limits:
-#      memory: "100Mi"
-#      cpu: "100m"
-#  initCopyConsulContainer:
-#    resources:
-#      requests:
-#        memory: "25Mi"
-#        cpu: "50m"
-#      limits:
-#        memory: "150Mi"
-#        cpu: "50m"
-#
-#webhookCertManager:
-#  tolerations: null
-#  nodeSelector: null
-#
-#prometheus:
-#  enabled: false
-#
-#tests:
-#  enabled: true
+syncCatalog:
+  enabled: ${enable_sync_catalog}
+  image: null
+  default: ${sync_by_default}
+  priorityClassName: ${sync_priority_class}
+  toConsul: ${sync_to_consul}
+  toK8S: ${sync_to_k8s}
+  k8sPrefix: ${sync_k8s_prefix}
+  k8sAllowNamespaces: [ "*" ]
+  k8sDenyNamespaces: [ "kube-system", "kube-public" ]
+  k8sSourceNamespace: null
+  consulNamespaces:
+    consulDestinationNamespace: "default"
+    mirroringK8S: true
+    mirroringK8SPrefix: ""
+  addK8SNamespaceSuffix: ${sync_add_k8s_namespace_suffix}
+  consulPrefix: null
+  k8sTag: null
+  consulNodeName: "k8s-sync"
+  syncClusterIPServices: ${sync_cluster_ip_services}
+  nodePortSyncType: ${sync_node_port_type}
+  aclSyncToken:
+    ${indent(4, sync_acl_token)}
+  nodeSelector: null
+  affinity: ${sync_affinity}
+  tolerations: ${sync_tolerations}
+  serviceAccount:
+    annotations: ${sync_service_account_annotations}
+  resources:
+    requests:
+      memory: "50Mi"
+      cpu: "50m"
+    limits:
+      memory: "50Mi"
+      cpu: "50m"
+  logLevel: ""
+  consulWriteInterval: null
+  extraLabels: null
+  annotations: null
+
+meshGateway:
+  enabled: false
+  replicas: 1
+  wanAddress:
+    source: "Service"
+    port: 443
+    static: ""
+  service:
+    type: LoadBalancer
+    port: 443
+    nodePort: null
+    annotations: null
+    additionalSpec: null
+  hostNetwork: false
+  dnsPolicy: null
+  consulServiceName: "mesh-gateway"
+  containerPort: 8443
+  hostPort: null
+  serviceAccount:
+    annotations: null
+  resources:
+    requests:
+      memory: "100Mi"
+      cpu: "100m"
+    limits:
+      memory: "100Mi"
+      cpu: "100m"
+  initServiceInitContainer:
+    resources:
+      requests:
+        memory: "50Mi"
+        cpu: "50m"
+      limits:
+        memory: "50Mi"
+        cpu: "50m"
+  affinity: null
+  tolerations: null
+  topologySpreadConstraints: ""
+  nodeSelector: null
+  priorityClassName: ""
+  annotations: null
+
+ingressGateways:
+  enabled: ${ingress_gateway_enable}
+  defaults:
+    replicas: 1
+    service:
+      type: ClusterIP
+      ports:
+      - port: 8080
+        nodePort: null
+      - port: 8443
+        nodePort: null
+      annotations: null
+      additionalSpec: null
+    serviceAccount:
+      annotations: null
+    resources:
+      requests:
+        memory: "100Mi"
+        cpu: "100m"
+      limits:
+        memory: "100Mi"
+        cpu: "100m"
+    affinity: null
+    tolerations: null
+    topologySpreadConstraints: ""
+    nodeSelector: null
+    priorityClassName: ""
+    terminationGracePeriodSeconds: 10
+    annotations: null
+    consulNamespace: "default"
+  gateways:
+  - name: ingress-gateway
+
+terminatingGateways:
+  enabled:  ${terminating_gateway_enable}
+  defaults:
+    replicas: 1
+    extraVolumes: [ ]
+    resources:
+      requests:
+        memory: "100Mi"
+        cpu: "100m"
+      limits:
+        memory: "100Mi"
+        cpu: "100m"
+    affinity: null
+    tolerations: null
+    topologySpreadConstraints: ""
+    nodeSelector: null
+    priorityClassName: ""
+    annotations: null
+    serviceAccount:
+      annotations: null
+    consulNamespace: "default"
+  gateways:
+  - name: terminating-gateway
+
+apiGateway:
+  enabled: false
+  image: null
+  imageEnvoy: "envoyproxy/envoy:v1.23.1"
+  logLevel: info
+  managedGatewayClass:
+    enabled: true
+    nodeSelector: null
+    tolerations: null
+    serviceType: LoadBalancer
+    useHostPorts: false
+    copyAnnotations:
+      service: null
+    deployment: null
+  serviceAccount:
+    annotations: null
+  controller:
+    replicas: 1
+    annotations: null
+    priorityClassName: ""
+    nodeSelector: null
+    tolerations: null
+    service:
+      annotations: null
+  resources:
+    requests:
+      memory: "100Mi"
+      cpu: "100m"
+    limits:
+      memory: "100Mi"
+      cpu: "100m"
+  initCopyConsulContainer:
+    resources:
+      requests:
+        memory: "25Mi"
+        cpu: "50m"
+      limits:
+        memory: "150Mi"
+        cpu: "50m"
+
+webhookCertManager:
+  tolerations: null
+  nodeSelector: null
+
+prometheus:
+  enabled: false
+
+tests:
+  enabled: true
